--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,5 @@
-
 # This file lists all individuals having contributed content to the repository.
 
 Kyanzi Hassan Musisi
 
-Fidelis Kanu
+Fidelis Arinze Kanu
